--- a/package.json
+++ b/package.json
@@ -1,54 +1,34 @@
 {
-  "name": "waifu.pics",
+  "name": "waifu-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@kugatsu/vuenotification": "^1.1.4",
-    "atob": "^2.1.2",
-    "axios": "^0.19.2",
-    "core-js": "^3.6.5",
-    "decode-uri-component": "^0.2.0",
-    "file-type": "^15.0.1",
-    "filepond": "^4.19.2",
-    "filepond-plugin-file-metadata": "^1.0.7",
-    "gsap": "^3.4.2",
-    "image-type": "^4.1.0",
-    "source-map-url": "^0.4.0",
-    "urix": "^0.1.0",
-    "vue": "^2.6.11",
-    "vue-filepond": "^6.0.2",
-    "vue-json-pretty": "^1.6.7",
-    "vue-notification": "^1.3.20",
-    "vue-router": "^3.2.0",
-    "vue-simple-markdown": "^1.1.4",
-    "vue2-dropzone": "^3.6.0",
-    "vuejs-noty": "^0.1.3",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "@mantine/core": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
+    "@mantine/next": "^4.1.3",
+    "@mdi/js": "^6.6.96",
+    "@mdi/react": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "axios": "^0.26.1",
+    "next": "12.1.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-feather": "^2.0.9",
+    "tabler-icons-react": "^1.44.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "~2.0.7",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "@types/node": "17.0.23",
+    "@types/react": "18.0.4",
+    "@types/react-dom": "18.0.0",
+    "eslint": "^8.13.0",
+    "eslint-config-next": "^12.1.5",
+    "typescript": "4.6.3"
   }
 }
